--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/south.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>South Stays</title>
+    <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript">  
+</script>
   </head>
   <body style="background-color: rgba(238, 185, 205, 0.697);">
     <div id="root"></div>
